Update-2 css-Design.js

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <table class="table">
             <thead>
                     <tr class="firstlgn">
-                    <th style="padding: 10px;">Ref</th>
+                    <th>Ref</th>
                     <th>Designation</th>
                     <th>Prix</th>
                     <th>Quantité</th>
