--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
             <div>Prix.U :<input type="number" id="Prix" required></div> 
 
-
                 <div > 
                 Quantité :<input type="number" id="Qtt"  required> 
             </div> 
@@ -69,6 +68,8 @@
         </table>
     </div>
 </div>
+<button  onclick="removeElement()">----</button>
+
 <script src="tableProduit.js" ></script>
 </body>
 </html>
